# mathematico

./: .gitignore  LICENSE  README.md  board_test.py  eval.py  eval_test.py  main.py  mathematico.ipynb  player.py  random_games.ipynb  requirements.txt  setup.cfg
.github/workflows/: lints.yml  pytest.yml
game/: LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt
game/mathematico/: __init__.py
game/mathematico/game/: __init__.py  _mathematico.py  _utils.py  arena.py  board.py  eval.py
game/mathematico/players/: __init__.py  _human_player.py  _random_player.py  _random_simulations.py
game/tests/: board_test.py  eval_test.py
notebooks/: game_properties_symmetries.ipynb  random_games.ipynb
src/: __init__.py  board.py  eval.py  game.py  mcplayer.py  mcts.py  player.py  random_player.py  statistic.py
src/game/: __init__.py  _board.py  _eval.py  _mathematico.py  board.py  eval.py  mathematico.py  utils.py
src/mathematico/game/: _utils.py  arena.py  board.py  eval.py  player.py
src/mathematico/players/: _human_player.py  _random_player.py  _random_simulations.py
tests/: board_test.py  eval_test.py
