[metadata]
name = mathematico
version = 0.0.1
author = Michal Barnišin
description = A simple lottery game, with some simple bots attached
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src