# general information about the project
[project]
name = "mathematico"
version = "1.0.0"
description = "A single-player poker-like sudoku-style game."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["mathematico", "logic-game", "game"]
authors = [
    { name = "Michal Barnišin", email = "michal.barnisin14+mathematico@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []


# optional dependencies, not installed by deafult
[project.optional-dependencies]
lint = [
    "mypy>=0.910",
    "pycodestyle",
    "flake8>=3.9"
]
test = [
    "pytest>=6.0"
]


# links displayed on the pypi page
[project.urls]
repository = "https://github.com/balgot/mathematico"


# TODO: gui scripts
# [project.gui-scripts]
# name = "spam:main_gui"


# settings for building the package
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


# settings for mypy
[tool.mypy]
mypy_path = "."
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
